--- a/app/design/frontend/base/default/template/quafzi_fixedbillingaddress/customer/account/dashboard/address.phtml
+++ b/app/design/frontend/base/default/template/quafzi_fixedbillingaddress/customer/account/dashboard/address.phtml
@@ -35,9 +35,11 @@
                 <h4><?php echo $this->__('Default Billing Address') ?></h4>
                 <address>
                     <?php echo $this->getPrimaryBillingAddressHtml() ?><br />
-                    <?php /* COMMENTING THIS IS THE ONLY CHANGE OF THIS FILE
+<?php /* THIS IS THE ONLY CHANGE OF THIS FILE */ ?>
+                <?php if (false === Mage::helper('quafzi_fixedbillingaddress/data')->isAddressFixed()): ?>
                     <a href="<?php echo $this->getPrimaryBillingAddressEditUrl() ?>"><?php echo $this->__('Edit Address') ?></a>
-                    ******** END OF CHANGE */ ?>
+                <?php endif; ?>
+<?php /* END OF CHANGE */ ?>
                 </address>
             </div>
             <div class="col-2">
